--- a/app/views/kaminari/_first_page.html.erb
+++ b/app/views/kaminari/_first_page.html.erb
@@ -6,8 +6,6 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<% unless current_page.first? -%>
-  <li class="first">
-    <%= link_to raw(t 'views.pagination.first'), url, {:remote => remote} %>
-  </li>
-<% end -%>
+<li class="first page-item<%= current_page.first? ? ' disabled' : '' %>">
+  <%= link_to raw(t 'views.pagination.first'), url, {:remote => remote}, class: 'page-link' %>
+</li>
