--- a/app/views/kaminari/_last_page.html.erb
+++ b/app/views/kaminari/_last_page.html.erb
@@ -6,8 +6,6 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<% unless current_page.last? -%>
-  <li class="last">
-    <%= link_to raw(t 'views.pagination.last'), url, {:remote => remote} %>
-  </li>
-<% end -%>
+<li class="last page-item<%= current_page.last? ? ' disabled' : '' %>">
+  <%= link_to raw(t 'views.pagination.last'), url, {:remote => remote}, class: 'page-link' %>
+</li>
