--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -7,8 +7,6 @@
     remote:        data-remote
 -%>
 
-<% unless current_page.last? -%>
-  <li class="next">
-    <%= link_to raw(t 'views.pagination.next'), url, :remote => remote, :rel => 'next' %>
-  </li>
-<% end -%>
+<li class="next page-item<%= current_page.last? ? ' disabled' : '' %>">
+  <%= link_to raw(t 'views.pagination.next'), url, :remote => remote, :rel => 'next', class: 'page-link' %>
+</li>
