--- a/app/views/kaminari/_page.html.erb
+++ b/app/views/kaminari/_page.html.erb
@@ -7,6 +7,7 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<li class="page<%= ' active' if page.current? %>">
-  <%= link_to page, (page.current? ? 'javascript:void(0)' : url), opts = {:remote => remote, :rel => page.next? ? 'next' : page.prev? ? 'prev' : nil} %>
+<li class="page page-item<%= ' active' if page.current? %>">
+  <%= link_to page, (page.current? ? 'javascript:void(0)' : url), remote: remote,
+              rel: page.next? ? 'next' : page.prev? ? 'prev' : nil,  class: 'page-link'%>
 </li>
