--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -6,8 +6,6 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<% unless current_page.first? -%>
-  <li class="prev">
-    <%= link_to raw(t 'views.pagination.previous'), url, :remote => remote, :rel => 'prev' %>
-  </li>
-<% end -%>
+<li class="prev page-item<%= current_page.first? ? ' disabled' : '' %>">
+  <%= link_to raw(t'views.pagination.previous'), url, :remote => remote, :rel => 'prev', class: 'page-link' %>
+</li>
