--- a/app/views/kaminari/_last_page.html.erb
+++ b/app/views/kaminari/_last_page.html.erb
@@ -7,5 +7,5 @@
     remote:        data-remote
 -%>
 <li class="last page-item<%= current_page.last? ? ' disabled' : '' %>">
-  <%= link_to raw(t 'views.pagination.last'), url, {:remote => remote}, class: 'page-link' %>
+  <%= link_to raw(t 'views.pagination.last'), url, :remote => remote, class: 'page-link' %>
 </li>
