--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -8,5 +8,5 @@
 -%>
 
 <li class="next page-item<%= current_page.last? ? ' disabled' : '' %>">
-  <%= link_to raw(t 'views.pagination.next'), url, :remote => remote, :rel => 'next', class: 'page-link' %>
+  <%= link_to raw(t 'views.pagination.next'), url, remote: remote, rel: 'next', class: 'page-link' %>
 </li>
