--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -7,5 +7,5 @@
     remote:        data-remote
 -%>
 <li class="prev page-item<%= current_page.first? ? ' disabled' : '' %>">
-  <%= link_to raw(t'views.pagination.previous'), url, :remote => remote, :rel => 'prev', class: 'page-link' %>
+  <%= link_to raw(t'views.pagination.previous'), url, remote: remote, rel: 'prev', class: 'page-link' %>
 </li>
